<resources>
	<string name="app_name">FBeemer</string>
	<string name="OkButton">OK</string>
	<string name="ClearButton">Clear</string>
	<string name="CancelButton">Cancel</string>
	<string name="AcceptButton">Authorize</string>
	<string name="RefuseButton">Deny</string>
	<string name="JabberID">Username</string>
	<string name="Password">Password</string>
	<string name="package_name">com.unkzdomain.fbeemer</string>
	<string name="FBeemerJabberID">Username</string>
	<string name="FBeemerApplicationConnect">Connecting...</string>
	<string name="FBeemerServiceDescription">Use FBeemer Service</string>
	<string name="FBeemerServiceCreated">FBeemer Service Created</string>
	<string name="FBeemerServiceDestroyed">FBeemer Service Destroyed</string>
	<string name="CDChat">Chat</string>
	<string name="CDCall">Call</string>
	<string name="CDInfos">Manage User</string>
	<string name="AddCActTitle">FBeemer - Add a contact</string>
	<string name="AddCLogin">Username</string>
	<string name="AddCAlias">Alias</string>
	<string name="AddCGroup">Group</string>
	<string name="AddCOkButton">Add</string>
	<string name="AddCContactAdded">Contact added</string>
	<string name="AddCContactAddedError">Error Contact not added</string>
	<string name="AddCContactAddedLoginError">Error Login</string>
	<string name="AddCBadForm">Bad form</string>
	<string name="AddCContactAlready">Contact already exist</string>
	<string name="SettingsText">Edit your username</string>
	<string name="SettingsPassword">Edit your password</string>
	<string name="SettingsProxy">Proxy</string>
	<string name="SettingsProxyProxy">Use a proxy server</string>
	<string name="SettingsProxySummary">Login through a proxy server</string>
	<string name="SettingsProxyType">Protocol</string>
	<string name="SettingsProxyTypeSummary">Choose the proxy server type</string>
	<string name="SettingsProxyServer">Edit proxy server address</string>
	<string name="SettingsProxyPort">Edit proxy server port</string>
	<string name="SettingsProxyUser">Optional, allow to authenticate yourself on the
		proxy server</string>
	<string name="SettingsProxyPassword">Optional, allow to authenticate yourself on the
		proxy server</string>
	<string name="SettingsAdvanced">Advanced</string>
	<string name="SettingsAdvancedOptions">Specific server option</string>
	<string name="SettingsAdvancedRecoDelay">Modify reconnection delay</string>
	<string name="SettingsAdvancedSpecOpt">Check this box if you want to use a specific server
		for your connection</string>
	<string name="SettingsAdvancedAddOpt">Edit the server address</string>
	<string name="SettingsAdvancedPortOpt">Edit the server port</string>
	<string name="SettingsResourceTitle">Resource</string>
	<string name="SettingsPriorityTitle">Priority</string>
	<string name="SettingsResourceSummary">Set the XMPP resource of your client </string>
	<string name="SettingsPrioritySummary">Set the priority of your client</string>
	<string name="contact_list_preferences">Buddy list</string>
	<string name="contact_list_preferences_sum">A set of display options for your buddy list
	</string>
	<string name="CLP_hide_groups">Hide groups</string>
	<string name="CLP_hide_groups_sum">Check this option to hide groups</string>
	<string name="CLP_hidden_contact">Hide buddies</string>
	<string name="CLP_hidden_contact_sum">Check this option to hide unconnected buddies
	</string>
	<string name="settings_account_username">Username</string>
	<string name="login_username_info_default">user@chat.facebook.com</string>
	<string name="settings_account_password">Password</string>
	<string name="settings_account_server">Server</string>
	<string name="settings_account_port">Port</string>
	<string name="settings_advanced_service_behaviour">Service behavior</string>
	<string name="settings_advanced_sum">A set of options for advanced users</string>
	<string name="settings_xmpp_server">Address</string>
	<string name="comments_xmpp_server">example.com</string>
	<string name="settings_xmpp_port">Port</string>
	<string name="settings_xmpp_use_tls">Require SSL/TLS</string>
	<string name="settings_reco_delay">Reconnection delay</string>
	<string name="comments_xmpp_port">Default: 5222</string>
	<string name="settings_proxy_sum">Settings for proxy usage</string>
	<string name="settings_proxy_use">Connect using a proxy</string>
	<string name="settings_proxy_type_prompt">Choose a type of proxy</string>
	<string name="settings_proxy_server">Server</string>
	<string name="settings_proxy_port">Port</string>
	<string name="comments_proxy_port">Default: 1080</string>
	<string name="settings_proxy_username">Username</string>
	<string name="settings_proxy_password">Password</string>
	<string name="away_chk_title">Enable Auto-away</string>
	<string name="away_chk_sum">Change status to Away when the screen is turned off</string>
	<string name="away_message_title">Away message</string>
	<string name="away_message_sum">The away message that will be displayed</string>
	<string name="away_message_hint">I\'m away, my cellphone screen is off</string>
	<string name="notification_preferences">Notification settings</string>
	<string name="notification_disable_vibrate_title">Enable Vibrate</string>
	<string name="notification_disable_vibrate_sum">Enable vibrate on incoming messages</string>
	<string name="notification_snd_title">Message ringtone</string>
	<string name="notification_snd_sum">Set your incoming message ringtone</string>
	<string name="FBeemerChatManagerNewMessage">You\'ve a new message</string>
	<string name="FBeemerBroadcastReceiverDisconnect">FBeemer: You have been disconnected</string>
	<string name="AcceptContactRequest">%s has just added you to his/her buddy list.</string>
	<string name="AcceptContactRequestFrom">Authorize %s to contact you.</string>
	<string name="login_tag">FBeemer - Login Activity</string>
	<string name="edit_settings_name">FBeemer - Settings</string>
	<string name="edit_settings_tag">FBeemer - EditSettings Activity</string>
	<string name="create_account_name">FBeemer - Create an account</string>
	<string name="create_account_tag">FBeemer - CreateAccount Activity</string>
	<string name="contact_list_name">FBeemer - Contacts</string>
	<string name="contact_list_tag">FBeemer - ContactList Activity</string>
	<string name="user_info_name">FBeemer - User Info</string>
	<string name="button_create_account">Create this account</string>
	<string name="button_create_login_account">Create and use this account</string>
	<string name="login_username">Username</string>
	<string name="login_password">Password</string>
	<string name="login_error_dialog_title">Login - Error</string>
	<string name="login_close_dialog_button">Close</string>
	<string name="login_menu_create_account">Create an account</string>
	<string name="login_menu_settings">Settings</string>
	<string name="login_menu_about">About</string>
	<string name="login_about_title">FBeemer %s - About</string>
	<string name="login_about_msg">
		FBeemer was created by Ankush Gupta. It is forked
		from an app named Beem.
	</string>
	<string name="login_about_button">Close</string>
	<string name="login_settings_button">Settings</string>
	<string name="login_login_button">Log in</string>
	<string name="login_login_progress">Connecting. Please wait...</string>
	<string name="login_error_msg">Unfortunately, an error occurred.\n\nError
		detail:\n%s</string>
	<string name="login_menu_login">Login</string>
	<string name="login_no_connectivity">No Internet connection found</string>
	<string name="login_start_msg">Settings configuration in menu</string>
	<string name="loganim_connecting">Connecting ...</string>
	<string name="loganim_authenticating">Authenticating ...</string>
	<string name="loganim_login_success">Login succeeded!</string>
	<string name="loganim_login_failed">Login failed.</string>
	<string name="settings_menu_create_account">Create an account</string>
	<string name="settings_menu_privacy_lists">Manage my privacy lists</string>
	<string name="settings_saved_ok">The settings have been saved successfully.</string>
	<string name="general_preferences">General preferences</string>
	<string name="user_preferences">User settings (required)</string>
	<string name="user_preferences_advanced">User settings advanced (optional)</string>
	<string name="network_preferences">Network options</string>
	<string name="proxy_proxy_settings">Proxy settings</string>
	<string name="proxy_user_settings">Proxy settings</string>
	<string name="settings_tab_tag_account">edit_settings_tab_account</string>
	<string name="settings_tab_label_account">Account</string>
	<string name="settings_tab_tag_xmpp">edit_settings_tab_xmpp</string>
	<string name="settings_tab_label_xmpp">XMPP</string>
	<string name="settings_tab_tag_proxy">edit_settings_tab_proxy</string>
	<string name="settings_tab_label_proxy">Proxy</string>
	<string name="account_wizard_text1">
		<b>Welcome to FBeemer.</b>
		\n\nYou have not configured a Facebook account yet.
	</string>
	<string name="account_wizard_configure_text">
		<b>Please fill in the data for your account</b>
	</string>
	<string name="account_wizard_configure_account">I already have an account I want to use</string>
	<string name="account_wizard_create_account">I want to register for a new account</string>
	<string name="contact_list_menu_add_contact">Add a contact</string>
	<string name="contact_list_menu_settings">Settings</string>
	<string name="contact_list_menu_disconnect">Disconnect</string>
	<string name="contact_list_all_contact">All contacts</string>
	<string name="contact_list_no_group">No group</string>
	<string name="userinfo_label_alias">Alias</string>
	<string name="userinfo_label_chg_group">Manage groups</string>
	<string name="userinfo_label_re_subscription">Resend invit</string>
	<string name="userinfo_label_block">Block</string>
	<string name="userinfo_label_delete">Delete</string>
	<string name="userinfo_resend">Suscription resend</string>
	<string name="userinfo_sure2delete">Are you sure you want to delete this contact ?
	</string>
	<string name="userinfo_yes">Yes</string>
	<string name="userinfo_no">No</string>
	<string name="userinfo_sureresend">Are you sure you want to resend invit ?</string>
	<string name="chat_name">FBeemer - Chat</string>
	<string name="chat_input_default_value">Type your message</string>
	<string name="chat_self">Me</string>
	<string name="chat_error">Error</string>
	<string name="chat_send_message">Send</string>
	<string name="chat_menu_contacts_list">Contacts list</string>
	<string name="chat_menu_change_chat">Switch chat</string>
	<string name="chat_dialog_change_chat_title">Opened chats</string>
	<string name="chat_menu_close_chat">Close this chat</string>
	<string name="chat_no_more_chats">No more active chats</string>
	<string name="chat_state_composing">is composing a message</string>
	<string name="chat_state_gone">has left the conversation</string>
	<string name="chat_state_active">pays attention to the conversation</string>
	<string name="chat_state_inactive">is doing another thing</string>
	<string name="contact_status_msg_available">Available</string>
	<string name="contact_status_msg_available_chat">Available to chat</string>
	<string name="contact_status_msg_dnd">Do not disturb</string>
	<string name="contact_status_msg_away">Away</string>
	<string name="contact_status_msg_xa">Unavailable</string>
	<string name="contact_status_msg_offline">Disconnected</string>
	<string name="UpdateButton">Update</string>
	<string name="error_login_authentication">Error during authentication, bad login or password.</string>
	<string name="interna_server_error">Remote server error</string>
	<string name="bad_request">bad-request</string>
	<string name="forbidden">forbidden</string>
	<string name="item_not_found">item-not-found</string>
	<string name="conflict">conflict</string>
	<string name="feature_not_implemented">feature-not-implemented</string>
	<string name="gone">gone</string>
	<string name="jid_malformed">jid-malformed</string>
</resources>