<?xml version="1.0" encoding="utf-8"?>
	<!--
		The format of the preference key is defined in
		src/com/unkzdomain/fbeemer/app/FBeemerApplication.java Basically it is
		just a simple name like account_username.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:shouldDisableView="true" android:selectable="true">
	<PreferenceCategory android:title="@string/general_preferences">
		<PreferenceScreen android:key="contact_list"
			android:title="@string/contact_list_preferences" android:summary="@string/contact_list_preferences_sum">
			<CheckBoxPreference android:title="@string/CLP_hidden_contact"
				android:defaultValue="true" android:summary="@string/CLP_hidden_contact_sum"
				android:key="settings_key_hidden_contact" />
			<CheckBoxPreference android:title="@string/away_chk_title"
				android:defaultValue="true" android:summary="@string/away_chk_sum"
				android:key="settings_away_chk" />
			<EditTextPreference android:dependency="settings_away_chk"
				android:singleLine="true" android:summary="@string/away_message_sum"
				android:title="@string/away_message_title" android:key="settings_away_message"
				android:hint="@string/away_message_hint" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/notification_preferences">
			<CheckBoxPreference android:title="@string/notification_disable_vibrate_title"
				android:defaultValue="false" android:summary="@string/notification_disable_vibrate_sum"
				android:key="notification_vibrate" />
			<RingtonePreference android:title="@string/notification_snd_title"
				android:key="notification_sound" android:summary="@string/notification_snd_sum"
				android:ringtoneType="notification" android:showDefault="true" />
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/user_preferences">
		<EditTextPreference android:singleLine="true"
			android:summary="@string/SettingsText" android:title="@string/settings_account_username"
			android:key="account_username" android:hint="@string/login_username_info_default"
			android:inputType="textEmailAddress" />
		<EditTextPreference android:name="password"
			android:singleLine="true" android:password="true" android:summary="@string/SettingsPassword"
			android:title="@string/settings_account_password" android:key="account_password" />
	</PreferenceCategory>
	<PreferenceCategory android:title="Advanced">
		<PreferenceScreen android:title="Advanced Settings"
			android:summary="Please don't mess with this unless you know what you're doing.">
			<PreferenceCategory android:title="@string/user_preferences_advanced">
				<EditTextPreference android:key="settings_key_resource"
					android:title="@string/SettingsResourceTitle" android:summary="@string/SettingsResourceSummary"
					android:defaultValue="FBeemer" />
				<EditTextPreference android:key="settings_key_priority"
					android:title="@string/SettingsPriorityTitle" android:summary="@string/SettingsPrioritySummary"
					android:numeric="signed" android:defaultValue="0" />
			</PreferenceCategory>
			<PreferenceCategory android:title="@string/network_preferences">
				<PreferenceScreen android:key="advanced"
					android:title="@string/SettingsAdvanced" android:summary="@string/settings_advanced_sum">
					<PreferenceCategory android:title="@string/settings_advanced_service_behaviour">
						<CheckBoxPreference android:title="@string/settings_xmpp_use_tls"
							android:defaultValue="false" android:key="settings_key_xmpp_tls_use" />
						<EditTextPreference android:singleLine="true"
							android:title="@string/settings_reco_delay" android:name="Reconnect delay"
							android:summary="@string/SettingsAdvancedRecoDelay" android:key="settings_key_reco_delay"
							android:defaultValue="10" />
					</PreferenceCategory>
					<CheckBoxPreference android:title="@string/SettingsAdvancedOptions"
						android:defaultValue="true" android:summary="@string/SettingsAdvancedSpecOpt"
						android:key="settings_key_specific_server" />
					<EditTextPreference android:singleLine="true"
						android:dependency="settings_key_specific_server" android:name="adresse"
						android:defaultValue="chat.facebook.com" android:summary="@string/SettingsAdvancedAddOpt"
						android:title="@string/settings_xmpp_server" android:key="settings_key_xmpp_server"
						android:hint="@string/comments_xmpp_server" />
					<EditTextPreference android:singleLine="true"
						android:dependency="settings_key_specific_server" android:name="port"
						android:summary="@string/SettingsAdvancedPortOpt" android:title="@string/settings_xmpp_port"
						android:defaultValue="5222" android:numeric="signed"
						android:key="settings_key_xmpp_port" android:hint="@string/comments_xmpp_port" />
				</PreferenceScreen>
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>
